--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 <body>
 
   <!-- Display the map and title with HTML division tags  -->
-  <div id="map-title">Jack's map</div>
-  <div id="map"></div>
+  <div id="Greg's Map">Jack's map</div>
+  <div id="Map"></div>
 
   <!-- Create the interactive map content with JavaScript (.js) -->
   <script>
@@ -28,7 +28,7 @@
   /* Set up the initial map center and zoom level */
   var map = L.map('map', {
     center: [40.77, -72.69], // EDIT coordinates to re-center map
-    zoom: 10,  // EDIT from 1 (zoomed out) to 18 (zoomed in)
+    zoom: 18,  // EDIT from 1 (zoomed out) to 18 (zoomed in)
     scrollWheelZoom: false,
     tap: false
   });
@@ -42,8 +42,8 @@
   }).addTo(map);
 
   /* Display a point marker with pop-up text */
-  L.marker([41.77, -72.69]).addTo(map) // EDIT marker coordinates
-  .bindPopup("Insert pop-up text here"); // EDIT pop-up text message
+  L.marker([40.77, -70.69]).addTo(map) // EDIT marker coordinates
+  .bindPopup("Home"); // EDIT pop-up text message
 
   </script>
 </body>
